--- a/package.json
+++ b/package.json
@@ -8,5 +8,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "axios": "^1.13.2",
+    "dotenv": "^17.2.3",
+    "esbuild": "^0.27.2",
+    "postcss": "^8.5.6",
+    "react-bootstrap": "^2.10.10",
+    "sass": "^1.97.0"
   }
 }
