--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.23",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "esbuild": "^0.27.2",
+    "esbuild-sass-plugin": "^3.3.1",
     "postcss": "^8.5.6",
     "react-bootstrap": "^2.10.10",
     "sass": "^1.97.0"
