--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.3",
     "esbuild": "^0.27.2",
     "esbuild-sass-plugin": "^3.3.1",
+    "json-server": "^1.0.0-beta.3",
     "postcss": "^8.5.6",
     "react-bootstrap": "^2.10.10",
     "sass": "^1.97.0"
