--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.23",
     "axios": "^1.13.2",
+    "bootstrap": "^5.3.8",
     "dotenv": "^17.2.3",
     "esbuild": "^0.27.2",
     "esbuild-sass-plugin": "^3.3.1",
