--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "json-server": "^1.0.0-beta.3",
     "postcss": "^8.5.6",
     "react-bootstrap": "^2.10.10",
+    "react-router-dom": "^7.11.0",
     "sass": "^1.97.0"
   }
 }
